--- a/widget.ui
+++ b/widget.ui
@@ -13,7 +13,7 @@
   <property name="windowTitle">
    <string>Widget</string>
   </property>
-  <widget class="QOpenGLWidget" name="openGLWidget">
+  <widget class="VideoWidget" name="openGLWidget">
    <property name="geometry">
     <rect>
      <x>0</x>
@@ -51,6 +51,13 @@
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
+ <customwidgets>
+  <customwidget>
+   <class>VideoWidget</class>
+   <extends>QOpenGLWidget</extends>
+   <header location="global">videowidget.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
