[ADD] 添加video thread正常播放

--- a/widget.ui
+++ b/widget.ui
@@ -59,5 +59,25 @@
   </customwidget>
  </customwidgets>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>openButton</sender>
+   <signal>clicked()</signal>
+   <receiver>Widget</receiver>
+   <slot>open()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>437</x>
+     <y>449</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>416</x>
+     <y>589</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
+ <slots>
+  <slot>open()</slot>
+ </slots>
 </ui>
